--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang=“pt-br”>
   <head>
-    <title>Título da página</title>
+    <title>Fanpage de Gatinhos</title>
     <meta charset=“utf-8”>
   </head>
 
   <body>
-    <h1>Criação de repositório dentro do gitHub</h1>
+    <h1>Perfil #catsoninstagram</h1>
+    <img src='imagens/cat.png' />
   </body>
 </html>
